whatsApp : page de messages

--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -6,4 +6,5 @@
     --main-color-gray: gray;
     --main-color-like-gray: #ccc;
     --main-color-like-white: #efefef;
+    --main-color-blue: blue;
 }
