--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url("fontawesome/fontawesome.css");
+@import url("bootstrap/bootstrap-icons.css");
 @import url("color.css");
 @import url("utiles/utiles.css");
 @import url("styles.css");
