--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,12 +11,12 @@ i
 .home-body
 {
     height: calc(100vh - 80px);
-    background-color: var(--main-color-like-gray);
+    background-color: var(--main-color-like-white);
 }
 
 .home-content
 {
-    width: 85%;
+    width: 80%;
     height: 95vh;
     top: 50%;
     left: 50%;
@@ -26,7 +26,8 @@ i
 
 .profil
 {
-    min-width: 400px;
+    min-width: 350px;
+    max-width: 500px;
     background-color: var(--main-color-white);
 }
 
@@ -41,14 +42,26 @@ i
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 8px;
     width: 20px;
+    width: 20px;
+    height: 20px;
+}
+
+.profil-icon:hover
+{
+    background-color: var(--main-color-like-white);
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 50px;    
 }
 
 .profil-icon  .dot-add-new-status
 {
-    top: 4px;
-   left: 18px;
+    top: 11px;
+   left: 19px;
     width: 5px;
     height: 5px;
     border-radius: 50px;
@@ -58,7 +71,13 @@ i
 .profil-description
 {
     padding: 8px;
-    background-color: var(--main-color-like-white);
+    cursor: pointer;
+    /* background-color: var(--main-color-like-white); */
+}
+
+.main .profil-icon:hover
+{
+    background-color: var(--main-color-white);
 }
 
 .profil-search-box
@@ -66,6 +85,10 @@ i
     margin: 5px 0;
     border-bottom: 0.5px solid var(--main-color-like-white);
     padding-bottom: 10px;
+}
+.profil-search-box > i
+{
+    cursor: pointer;
 }
 
 .profil-search
@@ -120,6 +143,27 @@ i
     color: var(--main-color-secondary);
 }
 
+.discussion
+{
+    height: calc(100vh - 184px);
+    overflow: auto;
+}
+
+.discussion::-webkit-scrollbar
+{
+    width : 10px;
+}
+
+.discussion::-webkit-scrollbar-track
+{
+    background-color : var(--main-color-like-white);
+}
+
+.discussion::-webkit-scrollbar-thumb
+{
+    background-color : var(--main-color);
+}
+
 .discussion-item
 {
     height: 30px;
@@ -131,9 +175,10 @@ i
     cursor: pointer;
     background-color: var(--main-color-like-white);
 }
-.discussion-item .correspondent-image img
+.correspondent-image img
 {
     border-radius: 50px;
+    cursor: pointer;
 }
 .discussion-item .corespondent-pseudo
 {
@@ -141,19 +186,32 @@ i
     font-size: 0.9rem;
 }
 .discussion-item .correspondent-starting-message,
-.discussion-item .discussion-current-time
+.discussion-current-time
+{
+    font-size: 0.2rem;
+}
+
+.view
+{
+    color: var(--main-color-blue);
+}
+
+.not-view
 {
     color: var(--main-color-gray);
-    font-size: 0.2rem;
 }
 
 .main
 {
-    background-color: var(--main-color-like-white);
+    background-color: var(--main-color-like-gray);
     border-bottom: 5px solid var(--main-color-secondary);
 }
 
-.main-content
+.main-home
+{
+    height: calc(100vh - 80px);
+}
+.main-home-content
 {
     width: 480px;
 }
@@ -165,7 +223,188 @@ h1.description-title
     font-weight: normal;
 }
 
+.main-description
+{
+    margin: 0 auto;
+    width: 350px;
+}
+
 .main-description p
 {
     font-size: 0.5rem;
 }
+
+.main .main-header
+{
+    height: 50px;
+    padding: 0 20px;
+    border-left: 1px solid var(--main-color-like-gray);
+    background-color: var(--main-color-like-white);
+}
+
+.main-header > i
+{
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+/* 
+.main .correspondent-infos
+{
+
+} */
+#main-content
+{
+    display : none;
+}
+
+.main-body
+{
+    height: calc(100vh - 180px);
+    padding: 20px 35px;
+    overflow: auto;
+    background-color: var(--main-color-like-gray);
+    background-image: url("../images/background/bg-chat.png");
+}
+
+
+.main-body::-webkit-scrollbar
+{
+    width : 10px;
+}
+
+.main-body::-webkit-scrollbar-track
+{
+    background-color : var(--main-color-like-white);
+}
+
+.main-body::-webkit-scrollbar-thumb
+{
+    background-color : var(--main-color);
+}
+
+.receiver-text,
+.sender-text
+{
+    width: 460px;
+    margin: 10px 0;
+    font-size: 0.5rem;
+    border-radius: 5px;
+}
+
+.receiver-text
+{
+    align-self: flex-start;
+    background-color: var(--main-color-white);   
+}
+
+
+/* 
+.receiver-text::before
+{
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    content: " ";
+} */
+.discussion-details
+{
+    right: 8px;
+    bottom: 10px;
+}
+
+.text
+{
+    padding-bottom: 12px;
+}
+
+.sender-text
+{
+    align-self: flex-end;
+    background-color: lightgreen;
+}
+
+.text-box
+{
+    width: 100%;
+    padding: 8px 5px;
+    box-sizing: border-box;
+    /* height: 40px; */
+    bottom: 0;
+    left: 0;
+    background-color: var(--main-color-like-white);
+    box-shadow: 1px 2px 0px var(--main-color-gray);
+    /* border: 0.1px solid var(--main-color-white);
+    border-left: none; */
+}
+
+.text-box i
+{
+    font-size: 1.1rem;
+}
+.text-box input
+{
+    width: 100%;
+    height: 30px;
+    background-color: var(--main-color-white);
+    color: var(--main-color-gray);
+    outline: none;
+    border: none;
+    font-size: 1.2rem;
+}
+.text-box input::placeholder
+{
+    padding-left: 10px;
+}
+.sender-text i.fa-share
+{
+    font-size: 0.8rem;
+    padding: 5px;
+    left: -35px;
+    border-radius: 50px;
+    color: var(--main-color-white);
+    background-color: var(--main-color-gray);
+}
+.text-file-transfert img
+{
+    width: 100%;
+}
+
+@media screen and (max-width: 970px) 
+{ 
+  .home-content .profil
+  {
+    width: 100%;
+    max-width: none;
+    min-width: auto;
+  }
+  /* width: ; */
+
+  .profil-search-box
+  {
+    flex-wrap: wrap;
+    padding: 0 5px;
+    justify-content: center;
+  }
+  .profil-search-box .profil-search
+  {
+    margin: inherit;
+    padding: 5px;
+  }
+  .main
+  {
+    display: none;
+  }
+
+  .main-header i
+  {
+    font-size: 1.2rem;
+    display: block;
+    cursor: pointer;
+  }
+  .main-description
+  {
+    width: 80%;
+  }
+  
+} 
