--- a/assets/css/utiles/utiles.css
+++ b/assets/css/utiles/utiles.css
@@ -2,7 +2,9 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    -webkit-user-select: none;
+    user-select: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .b{
     border: 1px solid black;
@@ -71,6 +73,9 @@ body{
 }
 .aic, .flex-center-v{
     align-items: center;
+}
+.aie, .flex-end-v{
+    align-items: flex-end;
 }
 /** POSITION **/
 .relative{
