whastApp - prjet complet

--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -4,6 +4,7 @@
     --main-color-secondary: #25D366;
     --main-color-white: #fff;
     --main-color-gray: gray;
+    --main-color-black: black;
     --main-color-like-gray: #ccc;
     --main-color-like-white: #efefef;
     --main-color-blue: blue;
